<resources>
    <string name="app_name">FitnesApp</string>
    <string name="programm">Фитнес - это оздоровительная методика, направленная на поддержание физической формы. Что становится возможным лишь тогда, когда фитнес прочно входит в образ жизни человека, меняя режим дня, двигательную активность, психическое здоровье, формируя позитивное мировосприятие.\n
    Наше приложение поможет вам в тренировках и поддержания формы.</string>
    <string name="pometka">Приложение не даёт 100% гарантии</string>
    <string name="osebe">Программа сделана Трофимовым Дмитрием для УП </string>
    <string name="sovet1">«Чтобы оставаться в форме при напряженном графике работы, я советую пять минут ежедневно уделять упражнению «планка», — говорит Руслан Байрамов, инструктор телеканала «ЖИВИ!», личный тренер звезд шоу-бизнеса (среди его подопечных – Мария Кравченко и Надежда Ангарская). — Для этого не нужно идти в зал, выполнять упражнение можно на любой ровной поверхности. У «планки» есть масса вариантов: на локтях, на ладонях, Т-планка… Для начала попробуйте продержаться в любой из них 30 секунд и набрать нужные 5 минут суммарно».Если тренироваться таким образом регулярно, улучшается осанка, гибкость, чувство равновесия, укрепляются мышцы кора, нормализуется обмен веществ.</string>
    <string name="sovet2">Это тоже позволит разнообразить ваши тренировки и поможет скорее похудеть: в воде тело двигается иначе, чем на суше, и тратит больше калорий. «Эмили Ванкэмп, звезда американского сериала «Месть», проводит в воде половину своих тренировок, — рассказывает тренер актрисы Лало Фуэнтес. — В бассейне она выполняет в быстром темпе сложные упражнения. Например, одновременно крутит левой ногой по часовой стрелке, правой – против часовой и при этом быстро двигает руками, чтобы оставаться в вертикальном положении. Эмили выполняет это упражнение до 15-ти минут». Кстати, водный фитнес подойдет и тем, кому противопоказаны интенсивные нагрузки в зале: здесь отсутствуют «помехи» в виде компрессии и гравитации.</string>
    <string name="sovet3">День большинства селебрити расписан по минутам, так что времени на тренировки остается немного. «Чтобы оставаться в форме при напряженном графике работы, я советую пять минут ежедневно уделять упражнению «планка», — говорит Руслан Байрамов, инструктор телеканала «ЖИВИ!», личный тренер звезд шоу-бизнеса (среди его подопечных – Мария Кравченко и Надежда Ангарская). — Для этого не нужно идти в зал, выполнять упражнение можно на любой ровной поверхности. У «планки» есть масса вариантов: на локтях, на ладонях, Т-планка… Для начала попробуйте продержаться в любой из них 30 секунд и набрать нужные 5 минут суммарно».Если тренироваться таким образом регулярно, улучшается осанка, гибкость, чувство равновесия, укрепляются мышцы кора, нормализуется обмен веществ.</string>
    <string name="sovet4">Регулярно тренироваться, правильно питаться, принимать БАДы и витамины. «Чтобы эта система не нарушалась, необходима постоянная мотивация, обеспечить которую может хороший тренер, — говорит Станислав Сконечны, тренер звезд шоу-бизнеса. — При выборе тренера учтите несколько моментов. Он должен быть приятен вам визуально и в общении, вас должно устраивать то, как он общается с другими людьми, вам следует знать о его регалиях. И самое главное — помните, тренеру не обязательно быть вашим другом, но он должен стать наставником и проводником в сфере фитнеса и здорового образа жизни».</string>
    <string name="sovet5">Люди думают, что знаменитости проводят в спортзале по полдня, поэтому так хорошо и выглядят. Но это не так: у большинства селебрити есть максимум час на тренировку. «Дело не в том, как долго вы работаете, а в том, насколько усердно, — объясняет Эшли Конрад, бывший тренер Кейт Хадсон. — Своим подопечным я рекомендую интервальные тренировки, например, по такой схеме: 15 секунд отжиманий, 10 секунд отдыха, 15 секунд выпадов, 10 секунд отдыха, 15 секунд бега с высоким подъемом коленей, 10 секунд отдыха, 15 секунд прыжков из стороны в стороны, 10 секунд отдыха». Если выполнить несколько таких «кругов» подряд, то даже получасовая тренировка будет весьма эффективной.</string>
    <string name="sovet6">Большая часть селебрити любит разнообразный тренинг: скука — злейший враг мотивации. «Недельный план тренировок должен включать и функциональные занятия, и силовые, и интервальные, а раз в две недели хорошо бы посещать танцы или йогу, — рекомендует Руслан Панов, эксперт-методист и координатор групповых программ федеральной сети фитнес-клубов X-Fit (тренировал Екатерину Шпицу и Юлию Ковальчук). — Такой подход обеспечит быстрые и высокие результаты. Из танцев лучше всего отдать предпочтение джаз фанку, а в йоге — выбрать классическую хатху: она поддерживает мобильность суставов и дает уникальную статическую нагрузку на все группы мышц».</string>
    <string name="sovet7">Чтобы не тратиться на психоаналитика, многие знаменитости занимаются единоборствами — это отличный способ и снять стресс, и поддерживать себя в нужной форме. «Алиша Кмз обожает высокоинтенсивный кикбоксинг и сжигает за час более 600 ккал, —говорит ее тренер Джанет Дженкинс. Алиша чередует передний, двойной и поперечный удары и всегда тренируется под музыку, поэтому после тренировок она всегда в отличном настроении».</string>
    <string name="sovet8">Поддерживать форму в турах и на гастролях артистам помогают полезные упражнения. «Вакуум живота позволяет не только сделать талию тонкой, но и оказывает благотворное влияние на органы брюшной полости, — говорит Руслан Байрамов. — Его нужно выполнять 15-45 секунд, но не более пяти минут в сутки. Очень важно делать «вакуум» на голодный желудок, иначе можно навредить организму». Обязательно следите за дыханием: во время выполнения упражнений вдыхать и выдыхать нужно только через нос.</string>
    <string name="sovet9">Все звезды, которые хотя бы время от времени посещают фитнес-клуб, в обязательном порядке тестируются. «Тестирование можно пройти в фитнес-клубе на специальных аппаратах, а также субъективно оценивать такие показатели как вес, сила, скорость, — говорит Руслан Панов. — Эти проверки могут стать хорошей отправной точкой для смены программ тренировок и питания. Будут полезны и в постановке новых задач».Не путайте тестирование с регулярным взвешиванием – в отличие от последнего, тест покажет, на какие группы мышц нужно обратить больше внимания, какие виды нагрузок вам не подходят, и в каком состоянии находится организм.</string>
    <string name="sovet10">Недостаток сна вредит здоровью и способствует набору лишнего веса, поэтому после долгих съемок или гастрольного тура звезды шоу-бизнеса стараются как следует отоспаться. Многие знаменитости придерживаются режима вне зависимости от нагрузок в течение дня. «Именно во сне происходит процесс восстановления, поэтому если вы хотите сохранить молодость и красоту, старайтесь ложиться спать и просыпаться в одно и то же время даже в выходные дни, – рекомендует Станислав Сконечны. – Старайтесь ложиться спать не позже 23-х часов, так как именно на промежуток времени с 22-х до 2-х часов ночи приходится пик выработки мелатонина и самототропина, дефицит которых приводит к преждевременному старению, ожирению, облысению и многим серьезным заболеваниям».</string>
    <string name="vid1">Силовая тренировка, также известная как силовая тренировка или тренировка с отягощениями, включает в себя выполнение физических упражнений, направленных на улучшение силы и выносливости. Они часто связаны с поднятием тяжестей. Они также могут включать в себя различные тренировочные техники, такие как упражнения с собственным весом, изометрию и плиометрию.[1]
        Тренировка работает путем постепенного увеличения отдачи силы мышцами и использует различные упражнения и типы оборудования. Силовые тренировки - это в первую очередь анаэробная активность, хотя круговые тренировки также являются формой аэробных упражнений.
        Силовые тренировки могут увеличить прочность мышц, сухожилий и связок, а также плотность костей, метаболизм и порог лактата; улучшить работу суставов и сердца; и снизить риск травм у спортсменов и пожилых людей. Для многих видов спорта и физических нагрузок силовые тренировки являются центральными или используются как часть тренировочного режима.</string>
    <string name="vid2">Кардиотренировка − вид физической активности, при котором сердце работает в учащенном режиме, а источником энергии выступает подкожный жир и гликоген. Нагрузки такого рода положительно влияют на работу органов, укрепляют сосуды, развивают дыхательную систему, повышают выносливость и помогают похудеть.
        Тренировка характеризуется минимальным набором силовых упражнений и, хотя задействует в работу различные группы мускулов, не приводит к увеличению объёмов мышечной массы. Такой тип нагрузки, как правило, присутствует в любой фитнес-программе, но вполне подходит и для занятий дома. При этом необходимым условием эффективности выступают повышенные значения пульса.
        Упражнения разгоняют сердечную мышцу до нужного числа сокращений, при которых организм активизирует метаболизм и биохимические процессы. Сохранение частоты пульса в заданных пределах в течение 30-60 мин обеспечивает качественный результат тренировки, однако превышение указанных границ уже несёт опасность для здоровья. Поэтому во время занятия необходим постоянный контроль за состоянием вышеуказанных параметров.</string>
    <string name="vid3">Растяжка - это форма физического упражнения, при котором определенная мышца или сухожилие (или группа мышц) намеренно растягивается и сгибается, чтобы улучшить ощущаемую эластичность мышц и достичь комфортного мышечного тонуса.Результатом является ощущение повышенного мышечного контроля, гибкости и диапазона движений. Растяжка также используется терапевтически для облегчения судорог и улучшения функций в повседневной деятельности за счет увеличения диапазона движений.
        В своей основной форме растяжка - это естественное и инстинктивное действие; ее выполняют люди и многие другие животные. Оно может сопровождаться зевотой. Растяжка часто происходит инстинктивно после пробуждения от сна, после длительных периодов бездействия или после выхода из замкнутых пространств. В дополнение к позвоночным (т.е. млекопитающим и птицам), было обнаружено, что пауки также проявляют растяжку.
        Повышение гибкости с помощью растяжки является одним из основных принципов физической подготовки. Спортсмены обычно выполняют растяжку до (для разминки) и после тренировки в попытке снизить риск травм и повысить производительность.</string>
    <string name="history">«Быть в форме», «соответствовать» — именно таков перевод термина «фитнес». Смысловая нагрузка термина, безусловно, означает — быть подтянутым, стройным, физически крепким и тому подобное.
        История фитнеса
        Любой современный человек, мало-мальски старающийся вести здоровый образ жизни, хоть и не посещающий спортивные залы, спортплощадки, но знающий цену активному образу жизни, ответит, что фитнес – это спортивные упражнения, соблюдение режима, здоровое питание, что в совокупности должно приносить отличное самочувствие, прекрасное настроение и крепкий иммунитет на долгие годы. В наш век урбанизации, увеличения численности городского населения и преобладания сидячей работы мы прекрасно понимаем роль фитнеса в нашей жизни, его влияние на нашу жизненную активность.
        Не зря вторая версия перевода термина «фитнес» — «соответствие». Нужно соответствовать времени. Именно время и сложившиеся в нем обстоятельства диктуют нам, какими мы должны быть в этих временных рамках. Время неустанно говорит нам лишь об одном – только работа над собой, стремление к постоянному физическому и умственному развитию, трезвому мышлению дает плоды и в полной мере удовлетворяет нас в будущем. </string>
</resources>