<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soveti">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="353dp"
        android:layout_height="682dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:text="1. Занимайтесь спортом на свежем воздухе"
                android:textAlignment="viewStart"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet1"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="2. Ежедневно делайте «планку»"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet2"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="3. Начните ходить в бассейн"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet3"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="4. Найдите своего тренера"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet4"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:text="5. Используйте все время тренировки"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet5"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:text="6. Не зацикливайтесь на одном виде нагрузки"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet6"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="7. Займитесь единоборствами"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet7"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="8. Делайте «вакуум» натощак"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sovet8"
                android:textAlignment="viewStart"
                android:textSize="18dp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back1"
        android:text="Назад"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>